# AI-Resume-Analyser

./: .dockerignore  .env.example  Makefile  README.md  docker-compose.yml
apps/frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
docs/: ARCHITECTURE.md
infra/k8s/: README.md  analysis-service.yaml  api-gateway.yaml  auth-service.yaml  frontend.yaml  minio.yaml  postgres.yaml  ranking-service.yaml  redis.yaml  resume-service.yaml
infra/nginx/: nginx.conf
libs/shared/: pyproject.toml
libs/shared/shared/: __init__.py  config.py  db.py  http.py  pagination.py  security.py
libs/shared/shared/models/: __init__.py  base.py  enums.py  tables.py  types.py
scripts/: wait_for_db.py
services/analysis-service/: Dockerfile  pyproject.toml
services/analysis-service/app/: main.py  tasks.py
services/analysis-service/tests/: conftest.py  test_analysis.py
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/app/api/: deps.py  proxy.py
services/api-gateway/app/api/routes/: analysis.py  auth.py  job_descriptions.py  ranking.py  resumes.py
services/api-gateway/app/core/: config.py  limiter.py
services/api-gateway/tests/: test_health.py
services/auth-service/: Dockerfile  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/app/: main.py
services/auth-service/tests/: conftest.py  (+1 more)
services/ranking-service/: Dockerfile  pyproject.toml
services/ranking-service/app/: main.py
services/ranking-service/app/api/routes/: ranking.py
services/ranking-service/app/core/: config.py
services/ranking-service/app/schemas/: ranking.py
services/ranking-service/app/services/: ranking_service.py
services/ranking-service/tests/: conftest.py  test_ranking.py
services/resume-service/: Dockerfile  pyproject.toml
(+145 files in other folders)
