[project]
name = "ai-resume-shared"
version = "0.1.0"
description = "Shared utilities and models for AI Resume Analyzer"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "pgvector>=0.2.5",
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = ""}

[tool.setuptools.packages.find]
where = ["."]
