[project]
name = "ai-resume-ranking-service"
version = "0.1.0"
description = "Ranking service for AI Resume Analyzer"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.0",
  "sqlalchemy==2.0.30",
  "asyncpg==0.29.0",
  "pydantic==2.7.1",
  "pydantic-settings==2.3.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "httpx==0.27.0",
  "aiosqlite==0.20.0",
]

[dependency-groups]
dev = [
  "pytest==8.2.0",
  "pytest-asyncio==0.23.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
